# MediAssist-AI

./: README.md  app.py  main.py  pyproject.toml  requirements.txt
agents/: diagnosis_agent.py  symptom_collector_agent.py
config/: settings.py
prompts/: diagnosis_prompt.txt  supervisor_prompt.txt  symptoms_collector_prompt.txt
supervisor/: supervisor_agent.py
utils/: model_loader.py
