[project]
name = "mediassist-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.120.4",
    "fastmcp>=2.13.0.2",
    "langchain>=1.0.3",
    "langchain-huggingface>=1.0.0",
    "langgraph>=1.0.2",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "langgraph-supervisor>=0.0.30",
    "python-dotenv>=1.2.1",
    "streamlit>=1.51.0",
    "uvicorn>=0.38.0",
]
